# telegram-ai-company-hub

./: .env.example  .gitignore  CODEX.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: __init__.py  cli.py  config.py  export.py  main.py  models.py  obsidian.py  planner.py  storage.py  telegram.py
docs/: architecture.md  setup.md
samples/: telegram_goal_update.json
tests/: test_api.py  test_planner.py
